# job-market

./: .gitignore
.github/workflows/: ci.yml  scrape.yml
backend/: .env.example  API.md  DEPLOYMENT.md  Dockerfile  README.md  SOURCE_COMPLIANCE.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py  errors.py  middleware.py
backend/app/api/routes/: health.py  jobs.py  skills.py
backend/app/core/: config.py  hashing.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  company.py  dedup_decision.py  job.py  job_skill.py  scrape_run.py  skill.py
backend/app/schemas/: common.py  jobs.py  skills.py
backend/app/services/: deduplication.py  normalization.py  persistence.py  role_filter.py  skill_extraction.py  taxonomy.py
backend/app/sources/: base.py  remoteok.py
backend/app/static/: index.html
backend/app/workers/: ingest.py
backend/data/: skills.json
backend/tests/: conftest.py  helpers.py  test_api.py  test_deduplication.py  test_ingest.py  test_normalization.py  test_remoteok.py  test_role_filter.py  test_skill_extraction.py
