[project]
name = "job-market-intelligence"
version = "0.1.0"
description = "Backend for a job market intelligence platform focused on software engineering roles."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "sqlalchemy>=2",
    "asyncpg",
    "alembic",
    "httpx",
    "structlog",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*.html"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection pattern requires calls in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
